# hubs-blender-exporter

./: .gitignore  .pylintrc  Pipfile  README.md  __init__.py  addon.py  check_style.py  components.py  consts.py  default-config.json  format.py  format.sh  gather_properties.py  gizmo_group.py  gizmo_info.py  gizmo_registry.py  importer.py  info.py  lightmaps.py  nodes.py  object.py  operators.py  package-lock.json  panels.py  settings.py  setup.sh  types.py  ui.py  utils.py
components/: __init__.py  component.py  components_registry.py  consts.py  external.py  external_operator.py  external_setting.py  gizmos.py  operators.py  panels.py  types.py  utils.py  visible.py  waypoint.py
elements/: __init__.py  audio_zone.py
gizmos/: __init__.py  audio.blend  audio_zone.py  box.blend  directional_light.blend  gizmo_custom.py  gizmo_group.py  gizmo_info.py  gizmo_registry.py  hubs_gizmo.py  image.blend  link.blend  media_frame.py  particle_emitter.blend  point_light.blend  reflection_probe.blend  scene_preview_camera.blend  spawn-point.glb  spawn_point.blend  spot_light.blend  utils.py  video.blend  waypoint.py
io/: gltf_exporter.py  utils.py
io_scene_hubs/: __init__.py  components.py  default-config.json  exporter.py  gather_properties.py  operators.py  panels.py  settings.py
io_scene_mozcomponents/: __init__.py  components.py  default-config.json  gather_properties.py  operators.py  panels.py  settings.py
prefabs/: __init__.py  (+3 more)
third_parties/recast/app/: CMakeLists.txt  main.cpp  mesh_navmesh.cpp  mesh_navmesh.h  recast-capi.cpp  recast-capi.h  recast-capi_global.h
(+234 files in other folders)
